--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ nav ul a:hover {
   -o-transition: .55s;
   -ms-transition: .55s;
   color: black;
-  background-color:skyblue;
+  background-color:white;
   text-decoration: none;
 }
 .stockBtn:hover{
