--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,8 @@ nav ul a:hover {
     color: inherit;
     text-decoration: none;
 }
+
+/*CONTACT SECTION*/
 .contactSector{
    
     /* height: 100%; */
@@ -78,8 +80,48 @@ nav ul a:hover {
     /*background-color: black;*/
     float: right !important;
     text-align: center;
+    color: white;
+    border-top: 1px;
+    border-top-color: white;
+    border-top-style: inset;
 
 }
+.contactSector h1{
+        /*font-size: 15px;*/
+
+}
+.contactSector img{
+    height: 10%;
+    width: auto;
+}
+.contactSector img:hover{
+      filter: brightness(55%);
+cursor: pointer;
+   -moz-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+
+    height: 15%;
+}
+.contactSector{
+    height: 100%;
+    float: right !important;
+    /*background-image: url('../img/eclipse.jpg');
+        background-position: 50%;
+    /*background-size: 80%;*/
+    /*background-repeat: no-repeat;
+    background-size: cover;*/
+    background-color: black;
+}
+.cContainer{
+    padding-top:8%;
+}
+.contactSector p{
+    color: darkgray;
+    font-size: small !important;
+}
+/*END CONTACT SECTION*/
 .iconInt{
     color: white;
 }
@@ -92,16 +134,7 @@ nav ul a:hover {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.contactSector{
-    height: 100%;
-    float: right !important;
-    /*background-image: url('../img/eclipse.jpg');
-        background-position: 50%;
-    /*background-size: 80%;*/
-    /*background-repeat: no-repeat;
-    background-size: cover;*/
-    background-color: black;
-}
+
 .decervoHomeSector{
     height:100%;
      float: right !important;
@@ -377,22 +410,22 @@ height: 100%;
     top:45%;
     color: white;
 }
-.nexusTitle{
+/*.nexusTitle{
     top:140%;
 }
 .nexusBtn{
     top:155%;
-}
+}*/
 .stockTitlePage{
 color: rgb(50, 50,50);
 }
 .stockTitle{
     color: rgb(50, 50,50);
-    top:240%;
+    top:140%;
 }
 .stockBtn{
         color: rgb(50, 50,50);
-    top:255%;
+    top:155%;
 }
 .loopTitle{
     top:340%;
@@ -408,7 +441,7 @@ color: rgb(50, 50,50);
     color: white;
 }
 .chowTitle{
-    top:540%;
+    top:240%;
 }
 /*.chowBtn{
     top:570%;
@@ -542,4 +575,13 @@ color: rgb(50, 50,50);
     color: white !important;
         background-color: transparent !important;
     /*list-style: none;*/
+}
+
+@media(max-width:1024px){
+.projectTitle, .moreBtn{
+display: none;
+}
+.navigation{
+    display: none;
+}
 }
