--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,9 @@ h1   { font-size: 2.4em; } /* =24px */
 p    { font-size: 1.4em; } /* =14px */
 li   { font-size: 1.4em; } /* =14px? */
 
-
+h2{
+    font-size: 26px !important;
+}
 /* vertical gradient with brighter in middle*/
 #nexus{
     background-image: url('../img/nexus.svg');
@@ -123,6 +125,9 @@ cursor: pointer;
 .cContainer{
     padding-top:10%;
 }
+.container{
+    width: inherit !important;
+}
 .contactSector p{
     color: darkgray;
     font-size: small !important;
@@ -232,18 +237,18 @@ cursor: pointer;
     width: 100%;
     padding: 5%;
     /*padding-top: 20%;*/
-    font-size: 30px;
+    font-size: 25px;
     text-align: left;
 }
 .textOverI{
     /*top:0px;*/
     position: absolute;
     visibility: hidden;
-    height: 100%;
-    width: 100%;
+    height: 50%;
+    /*width: 100%;*/
     padding: 5%;
     /*padding-top: 20%;*/
-    font-size: 25px;
+    font-size: 16px;
     text-align: center;
 }
 .loopIntro{
@@ -325,7 +330,7 @@ cursor: pointer;
    padding-bottom: 40px;
 }
 .decervoText h1{
-    font-size: 60px !important;
+    font-size: 50px !important;
     /*padding-bottom: 40px;*/
     font-weight: bold;
 }
@@ -373,7 +378,8 @@ font-weight: bold;
 height: 100%;
 }
 .textNeedle{
-    top: 45%;
+    top: 40%;
+    font-size: 28px;
 }
 .interests{
     color: white;
@@ -419,7 +425,7 @@ height: 100%;
     padding-top: 20px;
     padding-left: 30px;
     padding-right: 30px;
-    right: 47%;
+    right: 45%;
 }
 .moreBtn:hover{
       -webkit-transition: .55s;
@@ -437,7 +443,7 @@ height: 100%;
     /*right: 50%;*/
     text-align: center;
     top: 40%;
-    font-size: 12rem;
+    font-size: 8rem;
     color: white;
     margin: 0 auto;
 }
@@ -569,7 +575,7 @@ color: rgb(50, 50,50);
     position: relative;
     /*padding-bottom: 5%;*/
     /*font-family: "Quantico-Bold", sans-serif;*/
-    font-size: 10px;
+    font-size: 9px;
     color: rgba(255, 255, 255, .6);
     /*list-style: none;*/
 }
@@ -593,7 +599,7 @@ color: rgb(50, 50,50);
     width: 100%;
     position: relative;
     /*font-family: "Quantico-Bold", sans-serif;*/
-    font-size: 50px;
+    font-size: 15px;
     color: white !important;
         background-color: transparent !important;
     /*list-style: none;*/  
@@ -609,7 +615,7 @@ color: rgb(50, 50,50);
     width: 100%;
     position: relative;
     /*font-family: "Quantico-Bold", sans-serif;*/
-    font-size: 50px;
+    font-size: 40px;
     color: white !important;
         background-color: transparent !important;
     /*list-style: none;*/
@@ -619,9 +625,7 @@ color: rgb(50, 50,50);
 .projectTitle, .moreBtn{
 display: none;
 }
-.stockTitle{
-    display: inline;
-}
+
 .navigation{
     display: none;
 }
@@ -696,16 +700,14 @@ display: none;
 .stockVid{
     display: none;
 }
-.container{
-    width: inherit !important;
-}
-.chow{
-    display: none !important;
-}
+
 .chowAboutSector{
     width: inherit !important;
 }
 .loopAboutSector{
     width: inherit !important;
+}
+.decervoText{
+    padding-top: none !important;
 }
 }
