--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ h2{
 }
 /* vertical gradient with brighter in middle*/
 #nexus{
-    background-image: url('../img/nexus.svg');
+    background-image: url('./img/nexus.svg');
            background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0, 0, 0, .5);
@@ -82,10 +82,6 @@ nav ul a:hover {
     padding:8%;
 }
 .contactSector{
-   
-    /* height: 100%; */
-    /*color: white;*/
-    /*background-color: black;*/
     float: right !important;
     text-align: center;
     color: white;
@@ -115,11 +111,6 @@ cursor: pointer;
 .contactSector{
     height: 100%;
     float: right !important;
-    /*background-image: url('../img/eclipse.jpg');
-        background-position: 50%;
-    /*background-size: 80%;*/
-    /*background-repeat: no-repeat;
-    background-size: cover;*/
     background-color: black;
 }
 .cContainer{
@@ -159,7 +150,7 @@ cursor: pointer;
 .stockHomeSector{
     height:100%;
      float: right !important;
-    background-image: url('../img/stockUp.png');
+    background-image: url('../img/stockUp.PNG');
         background-position: 50%;
     /*background-size: 80%;*/
     background-repeat: no-repeat;
@@ -172,7 +163,7 @@ cursor: pointer;
 .loopOSHomeSector{
         height:100%;
      float: right !important;
-    background-image: url('../img/loop.png');
+    background-image: url('../img/loop.PNG');
     background-color: black;
         background-position: 50%;
     /*background-size: 80%;*/
@@ -203,13 +194,10 @@ cursor: pointer;
     color: white;
     float: right !important;
     text-align: center;
-    /*width: inherit !important;*/
 }
 .chowAboutSector{
-        /* height: 100%; */
      color:white; 
      background-color: #00517C;
-    /* background-color: black; */
     float: right !important;
     text-align: center;
     
@@ -226,8 +214,6 @@ cursor: pointer;
     font-weight: bold;
     font-size: 50px;
     padding: 5%;
-     /*text-decoration: underline;*/
-    /*text-shadow: 1px 1px;*/
 }
 .textOver{
     top:0px;
@@ -236,7 +222,6 @@ cursor: pointer;
     height: 100%;
     width: 100%;
     padding: 5%;
-    /*padding-top: 20%;*/
     font-size: 25px;
     text-align: left;
 }
@@ -244,8 +229,8 @@ cursor: pointer;
     /*top:0px;*/
     position: absolute;
     visibility: hidden;
-    height: 50%;
-    /*width: 100%;*/
+    height: 70%;
+    width: 100%;
     padding: 5%;
     /*padding-top: 20%;*/
     font-size: 16px;
@@ -307,17 +292,7 @@ cursor: pointer;
 .dSubTitle{
     font-weight: bold;
 }
-/*.decervoHomeSector:hover{
-    transform: scale(1.1536);
-      -webkit-transition: .55s;
-  -moz-transition: .55s;
-  -o-transition: .55s;
-  -ms-transition: .55s;
-}*/
 .decervoAboutSector {
-    /* height: 100%; */
-    /*color: white;*/
-    /*background-color: black;*/
     float: right !important;
     text-align: center;
 }
@@ -454,12 +429,6 @@ height: 100%;
     top:45%;
     color: white;
 }
-/*.nexusTitle{
-    top:140%;
-}
-.nexusBtn{
-    top:155%;
-}*/
 .stockTitlePage{
 color: rgb(50, 50,50);
 }
@@ -487,10 +456,6 @@ color: rgb(50, 50,50);
 .chowTitle{
     top:240%;
 }
-/*.chowBtn{
-    top:570%;
-    color: #8BC34A;
-}*/
 .musaicTitle{
     color: white;
     top: 540%;
@@ -620,6 +585,15 @@ color: rgb(50, 50,50);
         background-color: transparent !important;
     /*list-style: none;*/
 }
+.paragraph{
+    text-align: left;
+        margin-left: 5%;
+    margin-right: 5%;
+
+}
+.spacingD{
+    padding: 20px;
+}
 
 @media(max-width:1024px){
 .projectTitle, .moreBtn{
@@ -709,5 +683,8 @@ display: none;
 }
 .decervoText{
     padding-top: none !important;
+}
+.loopOSHomeSector{
+    float: none !important;
 }
 }
